--- a/judge-pagination/style.css
+++ b/judge-pagination/style.css
@@ -145,7 +145,7 @@ div.judgingGallery_info.wbox>div>span {
     top: unset;
     border: 0;
     text-align: center;
-    width: inherit;
+    width: 93.5%;
 }
 
 .formBuilderFormBreadCrumb.ui-helper-clearfix>ul>li>a {
