--- a/judge-pagination/style.css
+++ b/judge-pagination/style.css
@@ -144,8 +144,7 @@ div.judgingGallery_info.wbox>div>span {
     margin: -50px -5px 0;
     top: unset;
     border: 0;
-    text-align: center;
-    width: -webkit-fill-available;
+    width: 93.5%;
 }
 
 .formBuilderFormBreadCrumb.ui-helper-clearfix>ul>li>a {
