--- a/judge-pagination/style.css
+++ b/judge-pagination/style.css
@@ -136,7 +136,7 @@ div.judgingGallery_info.wbox>div>span {
     margin: -50px -5px 0;
     top: unset;
     border: 0;
-    min-width: 1010px;
+    width: 1010px;
 }
 
 .formBuilderFormBreadCrumb.ui-helper-clearfix>ul>li>a {
