--- a/judge-pagination/style.css
+++ b/judge-pagination/style.css
@@ -138,6 +138,7 @@ div.judgingGallery_info.wbox>div>span {
     top: unset;
     border: 0;
     width: 1010px;
+    text-align: center;
 }
 
 .formBuilderFormBreadCrumb.ui-helper-clearfix>ul>li>a {
