--- a/judge-pagination/style.css
+++ b/judge-pagination/style.css
@@ -14,6 +14,10 @@
     background-color: #eee;
 }
 
+#evaluation>div>h3 {
+    margin-bottom: 10px;
+}
+
 .button-row {
     clear: both;
     display: flex;
