--- a/owdemo/style.css
+++ b/owdemo/style.css
@@ -10,6 +10,7 @@ a.abtn.btn-secondary {
     background: #FF5722!important;
     border-radius: 3px!important;
     font-weight: bold!important;
+    height: 36px!important;
 }
 
 a.abtn.btn-secondary:hover {
@@ -19,9 +20,11 @@ a.abtn.btn-secondary:hover {
 button.btn-dark,
 a.button.btn {
     background: #072E4F!important;
+    height: 36px!important;
     color: #fff!important;
     font-weight: bold!important;
     border-radius: 3px!important;
+    border: none!important;
     margin: 0 0 14px!important;
 }
 
@@ -35,6 +38,7 @@ a.button.btn:hover {
 #go-fullscreen {
     overflow: hidden;
     text-overflow: ellipsis;
+    line-height: 15px !important;
 }
 
 #go-fullscreen:hover {
