--- a/css/currency-symbols.css
+++ b/css/currency-symbols.css
@@ -39,7 +39,7 @@
 .percent-sign .view::before {
     content: "%";
     position: absolute;
-    right: 5px;
+    left: 5px;
     bottom: 8px;
     font-size: 15px;
 }
