--- a/css/currency-symbols.css
+++ b/css/currency-symbols.css
@@ -2,7 +2,8 @@
 
 .dollar-sign .view,
 .euro-sign .view,
-.yen-sign .view {
+.yen-sign .view,
+.percent-sign .view {
     position: relative;
 }
 
@@ -10,6 +11,10 @@
 .euro-sign .view input[type="text"],
 .yen-sign .view input[type="text"] {
     padding-left: 12px;
+}
+
+.percent-sign .view input[type="text"] {
+    padding-right: 12px;
 }
 
 .dollar-sign .view::before {
@@ -39,7 +44,7 @@
 .percent-sign .view::before {
     content: "%";
     position: absolute;
-    left: 5px;
+    right: 5px;
     bottom: 8px;
     font-size: 15px;
 }
